[Fix] -> Added new class 'ast-no-comments' when there is no comment available in the post. Using this class reomved extra padding and margin and removed unwanted border.

--- a/sass/site/blog/single-post-layouts/_comment-form.scss
+++ b/sass/site/blog/single-post-layouts/_comment-form.scss
@@ -367,3 +367,11 @@
     box-shadow: inset 0 2px 4px 0 rgba(195, 209, 218, 0.16);
     outline-width: 0;
 }
+
+.ast-no-comments {
+    .comment-respond {
+        padding: 0;
+        border-top: 0;
+        margin-top: 0;
+    }
+}
